# MAC0350

./: .gitignore  .prettierrc.json  README.md
ProjetoIndividual/: app.py  db.py  projeto-webmac.db  pyproject.toml  requirements.txt  startup.py  utils.py
ProjetoIndividual/middlwares/: auth_middlwares.py
ProjetoIndividual/models/: trip_models.py  user_models.py
ProjetoIndividual/repositories/: trip_repositories.py  user_repositories.py
ProjetoIndividual/routes/: trip_routes.py  user_routes.py
ProjetoIndividual/static/css/: styles.css
ProjetoIndividual/static/scripts/: trips.js  users.js
ProjetoIndividual/templates/: index.html  layout.html  trips.html
ProjetoIndividual/templates/trips/: _list.html  _row.html  index.html
ProjetoIndividual/templates/users/: login.html  profile.html  register.html
WebMAC/Aulas/Aula00/: index.html
WebMAC/Aulas/Aula01/: index.html  styles.css
WebMAC/Aulas/Aula02/: index.html
WebMAC/Aulas/Aula03/: index.html
WebMAC/Aulas/Aula04/: app.py
WebMAC/Aulas/Aula04/models/: user.py
WebMAC/Aulas/Aula04/requests/: user_requests.py
WebMAC/Aulas/Aula04/responses/: user_response.py
WebMAC/Aulas/Aula05/: app.py
WebMAC/Aulas/Aula05/files/: index.html
WebMAC/Aulas/Aula05/models/: user_models.py
WebMAC/Aulas/Aula06/: kiwi.sql
WebMAC/Aulas/Aula07/: app.py  models.py
WebMAC/Aulas/Aula08/: app.py  index.html
WebMAC/Exercicios/Ex00/: index.html
WebMAC/Exercicios/Ex01/: index.html  styles.css
WebMAC/Exercicios/Ex02/: index.html
WebMAC/Exercicios/Ex03/: styles.css
WebMAC/Exercicios/Ex06/: models.sql  respostas.txt
(+14 files in other folders)
