[project]
name = "projeto-webmac"
version = "0.1.0"
description = "Gerenciador de viagens, roteiros e lugares para sair."
authors = [
    {name = "gdvcamargo",email = "zlFastShow@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.135.2,<0.136.0)",
    "sqlmodel (>=0.0.37,<0.0.38)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.19.1"
ruff = "^0.15.7"

[tool.mypy]
exclude = ['build']
check_untyped_defs = true
disallow_any_unimported = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
explicit_package_bases = true
ignore_missing_imports = false
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true